--- a/.github/workflows/blog-articles.yaml
+++ b/.github/workflows/blog-articles.yaml
@@ -1,7 +1,7 @@
 name: Latest blog articles
 on:
   schedule: # Run workflow automatically
-    - cron: '30 * * * *' # Runs every hour, on the hour
+    - cron: '30 0 * * *' # Runs at 00:30
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 jobs:
   update-readme-with-hashnode-blog:
